# folio

./: .gitignore  Dockerfile  README.md  config.yaml.example  docker-compose.yml  progress.md  pyproject.toml  spec.md
backend/: __init__.py  config.py  database.py  errors.py  main.py  migrations.py  scheduler.py
backend/models/: __init__.py  db.py  schemas.py
backend/routers/: agent.py  analytics.py  app.py  books.py  collections.py  market.py  portfolios.py  positions.py  simulations.py  workspaces.py
backend/services/: agent_service.py  app_config_service.py  market_data.py  portfolio_engine.py  real_estate_data.py  run_eligibility.py  simulation_generators.py  simulation_service.py  workspace_allocations.py  workspace_comparison.py  workspace_presenters.py  workspace_queries.py  workspace_service.py
backend/tests/: conftest.py  test_api.py  test_database.py  test_engine.py  test_market_data.py  test_workspace_helpers.py
docs/: model-research
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: agent.ts  app.ts  client.ts  market.ts  request.ts  simulations.ts  types.ts  workspaces.ts
frontend/src/components/: AddPositionModal.tsx  AgentSidebar.tsx  BookSnapshotPanel.tsx  ComparisonOverlayControls.tsx  ComparisonPlaybackControls.tsx  CreateBookModal.tsx  CreatePortfolioModal.tsx  CreateSimulationModal.tsx  CreateWorkspaceSetup.tsx  Dashboard.tsx  MetricsStrip.tsx  PortfolioChart.tsx  PositionDrawer.tsx  PositionsTable.tsx  (+8 more)
(+18 files in other folders)
